--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.4.17",
     "apollo-server-express": "^2.15.0",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
-    "graphql": "^16.0.1",
+    "graphql": "^15.7.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10"
   },
